--- a/public/index.css
+++ b/public/index.css
@@ -8,6 +8,7 @@
 
 * {
     font-family: 'Nunito', sans-serif;
+    font-size: 16px;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -17,4 +18,19 @@ body {
     overflow-x: hidden;
     min-height: 100vh;
     background: #fff;
+}
+
+h1 {
+    font-family: 'Playfair Display', serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 60px;
+    line-height: 120%;  
+}
+
+h2 {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 120%;
 }
