--- a/src/App.css
+++ b/src/App.css
@@ -18,10 +18,12 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 0px 100px;
-  gap: 120px;
   list-style: none;
   height: 80px;
+}
+
+#navbar ul li {
+  padding: 0 100px;
 }
 
 #navbar a {
@@ -52,9 +54,29 @@
   background-color: #fff;
 }
 
+.mobile-menu {
+  display: none;
+}
+
+.ai-three-line-horizontal {
+  font-size: 40px;
+  color: #fff;
+}
+
 @media (max-width: 640px) {
-  #navbar ul {
-    gap: 50px;
+  #navbar ul li {
+    padding: 0 20px;
+  }
+}
+
+@media (max-width: 320px) {
+  #navbar .menu,
+  #navbar .contact {
+      display: none;
+  }
+
+  .mobile-menu {
+    display: contents;
   }
 }
 
@@ -80,39 +102,53 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 120px;
 }
 
 #announcement .content {
   position: relative;
   display: flex;
-  width: 80%;
+  width: 100%;
   max-width: 1440px;
   justify-content: center;
   align-items: center;
-  gap: 50px
 }
 
-#announcement img {
-  max-width: 362px;
-  max-height: 398px;
+#announcement .logo {
+  width: 362px;
+  height: auto;
 }
 
-.a-message {
+#announcement .logo img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+#announcement .message {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0px;
-  gap: 20px;
-
   width: 640px;
   height: 398px;
+  margin-left: 120px;
 }
 
-@media (max-width: 1024px) { 
-  #announcement img {
-    transform: scale(.8);
+#announcement .message h1 {
+  margin-bottom: 20px;
+}
+
+@media (max-width: 1024px) {
+  #announcement .content {
+    padding: 0 20px;
+  }
+
+  #announcement .message {
+      margin-left: 20px;
+  }
+  
+  #announcement .logo {
+    width: 302px;
   }
 
   #announcement .message h1 {
@@ -126,7 +162,6 @@
 
 @media (max-width: 768px) {
   #announcement .content {
-    gap: 0;
     flex-wrap: wrap;
   }
 
@@ -136,12 +171,68 @@
 }
 
 @media (max-width: 640px) {
-  #announcement img {
-    transform: scale(.6);
+  #announcement .logo {
+    display: none;
   }
 
   #announcement .message h1 {
     font-size: 2.5em;
   }
-
 }
+
+
+/* CallToAction */
+#callToAction {
+  position: relative;
+  display: flex;
+  width: 100%;
+  max-width: 1440px;
+  justify-content: center;
+  align-items: center;
+  margin: 140px 0;
+}
+
+#callToAction .container {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  height: auto;
+  top: 0;
+}
+
+#callToAction .img-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  padding-left: 486px;
+}
+
+#callToAction .img-wrapper img {
+  max-width: 710px;
+  max-height: 902px;
+  opacity: .8;
+}
+
+#callToAction .form-wrapper {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding-right: 374px;
+  width: 100%;
+  height: auto;
+}
+
+#callToAction .form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  opacity: .80;
+}
+
